gcc/testsuite/rust/rustc/ui/macros/bang-after-name.rs
//@ run-rustfix
#[allow(unused_macros)]

macro_rules! foo! { // { dg-error "" "" { target *-*-* } }
    () => {};
}

fn main() {}

